# ShopList

./: LICENSE  README.md  alembic.ini  pyproject.toml  shoplist.db
alembic/: env.py
alembic/versions/: 1c0e83341cd8_tables_update.py  36f3db1e0d8f_first_migration_user_product_category.py  3f86f2858a1f_hashed_password_added_to_table_user.py  65c7f14b158a_updated_user_table_and_product_table.py  6de253506a75_merge_1c0e83341cd8_and_65c7f14b158.py  6f9f53ec6f0c_update_product_table.py  a8526ef1317e_added_product_table.py  be0b54c31040_updated_user_table_and_product_table.py  d57ca36f1d9f_init.py
app/: main.py  models.py  utils.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/controllers/: auth.py  users.py
app/core/: config.py
app/db/: base.py  session.py
app/entities/: category.py  product.py  user.py
app/repository/: repository.py  user_repository.py
app/schemas/: user_schema.py
